# token-mapping-contract

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh
mock-fungible-token/: Cargo.toml
mock-fungible-token/src/: lib.rs
src/: lib.rs
token-mapping-contract/: Cargo.toml
token-mapping-contract/src/: lib.rs
token-mapping-contract/tests/: test-token-mapping-contract.rs
token-mapping-contract/tests/common/: mod.rs
