[package]
name = "token-mapping-contract"
version = "0.1.0"
authors = ["Octopus Network"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"

[dev-dependencies]
hex-literal = "0.3.1"
near-sdk = "3.1.0"
near-sdk-sim = "3.1.0"
num-format = "0.4.0"
# remember to include related mock contracts
mock-fungible-token = { path = "../mock-fungible-token" }

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
